Fix spacing between pills

--- a/src/styles/scss/global/_technologies-list.scss
+++ b/src/styles/scss/global/_technologies-list.scss
@@ -5,15 +5,13 @@ $block: 'technologies-list';
 .#{$block} {
 	list-style: none;
 	margin-bottom: 0;
-	margin-top: 1.5rem;
+	margin-left: -0.5rem;
+	margin-top: 1rem;
 	padding-left: 0;
 
 	&__pill {
 		display: inline-block;
 		margin-left: 0.5rem;
-
-		&:first-child {
-			margin-left: 0;
-		}
+		margin-top: 0.5rem;
 	}
 }
